--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ mixinDebugExport = false
 recipeViewer = emi
 
 # Minecraft
-mcVersion = 1.20.4
+mcVersion = 1.21
 
 # Mod
 modVersion = 1.1.6
@@ -19,19 +19,15 @@ modAuthor = Almost Reliable
 modDescription = Keep items and fluids in your ME-System in stock.
 
 # Project Dependencies
-neoVersion = 20.4.196
-parchmentVersion = 2024.02.25
+neoVersion = 21.0.86-beta
+parchmentVersion = 2024.07.07
 
 # Mod Dependencies
-aeVersion = 17.12.1-beta
-jeiVersion = 17.3.0.49
-reiVersion = 14.0.688
-emiVersion = 1.1.2
+aeVersion = 19.0.8-alpha
+jeiVersion = 19.5.0.30
+reiVersion = 16.0.729
+emiVersion = 1.1.7
 
 # Github
 githubUser = AlmostReliable
 githubRepo = merequester
-
-# Gradle
-org.gradle.jvmargs = -Xmx3G
-org.gradle.daemon = false
