update deps and gradle setup

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ license = GNU Lesser General Public License v3.0
 loom.platform = neoforge
 
 # Settings
-logLevel = debug
+loggingLevel = debug
 mixinDebugExport = false
 recipeViewer = emi
 
@@ -19,14 +19,14 @@ modAuthor = Almost Reliable
 modDescription = Keep items and fluids in your ME-System in stock.
 
 # Project Dependencies
-neoVersion = 21.0.86-beta
-parchmentVersion = 2024.07.07
+neoVersion = 21.0.143
+parchmentVersion = 2024.07.28
 
 # Mod Dependencies
-aeVersion = 19.0.11-alpha
-jeiVersion = 19.5.0.30
-reiVersion = 16.0.729
-emiVersion = 1.1.7
+aeVersion = 19.0.18-beta
+jeiVersion = 19.5.2.66
+reiVersion = 16.0.744
+emiVersion = 1.1.10
 
 # Github
 githubUser = AlmostReliable
