--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - "1.20.4"
+      - "1.21"
     tags-ignore:
       - "**"
     paths:
@@ -15,7 +15,7 @@ on:
       - "**/build.yml"
   pull_request:
     branches:
-      - "1.20.4"
+      - "1.21"
     paths:
       - "gradle/**"
       - "**.java"
@@ -29,4 +29,7 @@ concurrency:
 
 jobs:
   redirect:
-    uses: AlmostReliable/.github/.github/workflows/build-java17.yml@main
+    uses: AlmostReliable/.github/.github/workflows/build.yml@main
+    with:
+      java-distribution: "microsoft"
+      java-version: "21"
